# gpt-terminal-assistant

./: .gitignore  INSTALLATION.md  LICENSE  README.md  config.json  main.py  pyproject.toml
.github/workflows/: ci.yml  test.yml
assistant/: chat_client.py  cli.py  evaluation_logger.py  token_utils.py  vector_store.py
logs/: eval_log.jsonl
src/assistant/: chat_client.py  cli.py  vector_store.py
src/embedding_models/: openai_embedder.py
src/llm/: models.json  openai_llm.py  prompt.yaml
src/registries/: embedding_registry.py  llm_registry.py  vector_registry.py
src/tests/: test_chat_client.py  test_token_utils.py
src/utils/: config.py  evaluation_logger.py  prompt_loader.py
src/vector_backends/: chroma_store.py
tests/: test_chat_client.py  test_token_utils.py  test_vectorstore.py
utils/: debug.py
