[project]
name = "gpt-terminal-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.13",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.67",
    "langchain-openai>=0.3.27",
    "openai>=1.91.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.9.0",
    "torch>=2.2.2",
    "uuid>=1.30",
]

[pytest]
pythonpath = "src"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["assistant", "utils", "vectors"]

[project.scripts]
gpt-assistant = "assistant.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"